--- a/arch/arm/configs/bacon_defconfig
+++ b/arch/arm/configs/bacon_defconfig
@@ -472,8 +472,8 @@ CONFIG_ASHMEM=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_PRIMA_WLAN=y
-CONFIG_PRONTO_WLAN=y
+CONFIG_PRIMA_WLAN=m
+CONFIG_PRONTO_WLAN=m
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
